[gd_scene load_steps=14 format=2]

[ext_resource path="res://characters/enemies/Monster.gd" type="Script" id=3]
[ext_resource path="res://characters/HealthManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/enemies/AimAtObject.gd" type="Script" id=6]
[ext_resource path="res://weapons/DamageArea.gd" type="Script" id=7]
[ext_resource path="res://effects/SoundEffects/AlertGrunt.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sounds/DSSKLATK.wav" type="AudioStream" id=10]
[ext_resource path="res://characters/Popuptest.tscn" type="PackedScene" id=11]
[ext_resource path="res://characters/enemies/raw_assets/Cultist/cultist_05b.tscn" type="PackedScene" id=13]

[sub_resource type="CapsuleShape" id=1]
radius = 0.627774
height = 0.358803

[sub_resource type="RayShape" id=2]
length = 0.642906

[sub_resource type="Animation" id=15]
resource_name = "die"
length = 1.25
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:Bone.013")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0.266667, 1, -1.16415e-09, -2.6077e-08, 1.49012e-08, 0.399253, 0.0930008, -0.0779315, 0.908776, 1, 1, 1, 0.333333, 1, 3.45754e-08, -2.23517e-08, 1.49012e-08, 0.410304, 0.0937391, -0.0752471, 0.903992, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:Bone.012")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/keys = PoolRealArray(  )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:Bone.002")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0.266667, 1, -3.72529e-09, 2.98023e-08, 0, -0.587187, -0.262501, 0.144125, 0.752019, 1, 1, 1, 0.333333, 1, -9.31323e-10, 2.98023e-08, 0, -0.570516, -0.346416, 0.224368, 0.710046, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("Armature/Skeleton:Bone.001")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/keys = PoolRealArray(  )
tracks/4/type = "transform"
tracks/4/path = NodePath("Armature/Skeleton:Hand_L")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/keys = PoolRealArray(  )
tracks/5/type = "transform"
tracks/5/path = NodePath("Armature/Skeleton:LowerArm_L")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/keys = PoolRealArray( 0.266667, 1, 2.23517e-08, 2.98023e-08, 7.45058e-09, -0.0734287, -0.20811, -0.106334, 0.969532, 1, 1, 1, 0.333333, 1, -1.49012e-08, 1.49012e-08, 2.23517e-08, -0.168109, -0.203767, -0.195685, 0.944418, 1, 1, 1 )
tracks/6/type = "transform"
tracks/6/path = NodePath("Armature/Skeleton:UpperArm_L")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/keys = PoolRealArray( 0.266667, 1, -9.31323e-10, 3.72529e-09, -7.45058e-09, -0.416957, -0.506171, 0.140451, 0.741762, 1, 1, 1, 0.333333, 1, 1.86265e-09, 1.11759e-08, -7.45058e-09, -0.452038, -0.555602, -0.0150819, 0.697668, 1, 1, 1 )
tracks/7/type = "transform"
tracks/7/path = NodePath("Armature/Skeleton:Shoulder_L")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/keys = PoolRealArray(  )
tracks/8/type = "transform"
tracks/8/path = NodePath("Armature/Skeleton:Hand_R")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/keys = PoolRealArray(  )
tracks/9/type = "transform"
tracks/9/path = NodePath("Armature/Skeleton:LowerArm_R")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/keys = PoolRealArray( 0.266667, 1, 7.45058e-09, -1.49012e-08, 2.98023e-08, 0.186012, 0.110486, 0.401569, 0.889907, 1, 1, 1, 0.333333, 1, 0, -2.98023e-08, 1.49012e-08, 0.139271, 0.135336, 0.579057, 0.791821, 1, 1, 1 )
tracks/10/type = "transform"
tracks/10/path = NodePath("Armature/Skeleton:UpperArm_R")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/keys = PoolRealArray( 0.266667, 1, -5.12227e-09, -2.6077e-08, -3.72529e-08, -0.196275, 0.586528, -0.556214, 0.555055, 1, 1, 1, 0.333333, 1, -4.65661e-09, -2.14204e-08, -2.98023e-08, -0.155539, 0.67079, -0.555776, 0.465791, 1, 1, 1 )
tracks/11/type = "transform"
tracks/11/path = NodePath("Armature/Skeleton:Shoulder_R")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = true
tracks/11/enabled = true
tracks/11/keys = PoolRealArray(  )
tracks/12/type = "transform"
tracks/12/path = NodePath("Armature/Skeleton:Bone")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = true
tracks/12/enabled = true
tracks/12/keys = PoolRealArray( 0.266667, 1, 0.0466637, -0.0916797, -0.148173, 0.464901, 0.223035, 0.0310748, 0.856246, 1, 1, 1, 0.333333, 1, 0.0469588, -0.098136, -0.229359, 0.43865, 0.334413, -0.00438496, 0.834107, 1, 1, 1 )
tracks/13/type = "transform"
tracks/13/path = NodePath("Armature/Skeleton:Foot_L")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = true
tracks/13/enabled = true
tracks/13/keys = PoolRealArray( 0.266667, 1, 4.47035e-08, 4.47035e-08, 0, 0.045518, 0.118895, 0.328277, 0.935963, 1, 1, 1, 0.333333, 1, -1.49012e-08, 2.98023e-08, -1.49012e-08, 0.0451702, -0.00771997, 0.237391, 0.970333, 1, 1, 1 )
tracks/14/type = "transform"
tracks/14/path = NodePath("Armature/Skeleton:LowerLeg_L")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = true
tracks/14/enabled = true
tracks/14/keys = PoolRealArray( 0.333333, 1, -2.98023e-08, 0, 9.31323e-10, 0.172516, 0.255148, 0.582188, 0.752459, 1, 1, 1 )
tracks/15/type = "transform"
tracks/15/path = NodePath("Armature/Skeleton:UpperLeg_L")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = true
tracks/15/enabled = true
tracks/15/keys = PoolRealArray( 0.266667, 1, 3.72529e-09, 0, 0, -0.0601023, -0.0888675, -0.628004, 0.770779, 1, 1, 1, 0.333333, 1, 3.72529e-08, 0, 0, -0.0639553, -0.0983993, -0.629683, 0.767937, 1, 1, 1 )
tracks/16/type = "transform"
tracks/16/path = NodePath("Armature/Skeleton:Hip_L")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = true
tracks/16/enabled = true
tracks/16/keys = PoolRealArray( 0.333333, 1, -0.25056, -0.0194932, 0.037087, -0.0579874, 0.0796894, 0.0153153, 0.995014, 1, 1, 1 )
tracks/17/type = "transform"
tracks/17/path = NodePath("Armature/Skeleton:CoatTailBottom_L")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = true
tracks/17/enabled = true
tracks/17/keys = PoolRealArray( 0.333333, 1, 7.45058e-09, 0, 0, 0.135447, 0.176013, 0.0992651, 0.969959, 1, 1, 1 )
tracks/18/type = "transform"
tracks/18/path = NodePath("Armature/Skeleton:CoatTailTop_L")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = true
tracks/18/enabled = true
tracks/18/keys = PoolRealArray( 0.333333, 1, -0.177846, 0.176759, -0.0407782, 0.084361, 0.139014, 0.103918, 0.981203, 1, 1, 1 )
tracks/19/type = "transform"
tracks/19/path = NodePath("Armature/Skeleton:Foot_R")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = true
tracks/19/enabled = true
tracks/19/keys = PoolRealArray( 0.266667, 1, 2.98023e-08, -2.23517e-08, -3.72529e-09, 0.00308126, -0.00925243, -0.0230687, 0.999686, 1, 1, 1, 0.333333, 1, -2.98023e-08, 8.19564e-08, -1.11759e-08, 0.0204765, -0.0614864, -0.153302, 0.986052, 1, 1, 1 )
tracks/20/type = "transform"
tracks/20/path = NodePath("Armature/Skeleton:LowerLeg_R")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = true
tracks/20/enabled = true
tracks/20/keys = PoolRealArray( 0.266667, 1, -4.47035e-08, -1.49012e-08, 1.49012e-08, -0.189844, -0.0256723, -0.420616, 0.886782, 1, 1, 1, 0.333333, 1, -2.98023e-08, -2.98023e-08, -3.72529e-09, -0.169099, -0.0681624, -0.470994, 0.86309, 1, 1, 1 )
tracks/21/type = "transform"
tracks/21/path = NodePath("Armature/Skeleton:UpperLeg_R")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = true
tracks/21/enabled = true
tracks/21/keys = PoolRealArray( 0.266667, 1, 0, 0, 0, 0.0481912, 0.0858223, 0.603149, 0.791532, 1, 1, 1, 0.333333, 1, -3.72529e-09, 0, 1.49012e-08, 0.00390092, 0.110686, 0.728036, 0.676533, 1, 1, 1 )
tracks/22/type = "transform"
tracks/22/path = NodePath("Armature/Skeleton:Hip_R")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = true
tracks/22/enabled = true
tracks/22/keys = PoolRealArray( 0.333333, 1, 0.24055, -0.0768861, 0.0152394, 0.0310415, -0.174374, -0.306426, 0.935272, 1, 1, 1 )
tracks/23/type = "transform"
tracks/23/path = NodePath("Armature/Skeleton:CoatTailBottom_R")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = true
tracks/23/enabled = true
tracks/23/keys = PoolRealArray( 0.333333, 1, 9.31323e-09, 8.9407e-08, 0, -0.00250051, 0.0472554, -0.130614, 0.990303, 1, 1, 1 )
tracks/24/type = "transform"
tracks/24/path = NodePath("Armature/Skeleton:CoatTailTop_R")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = true
tracks/24/enabled = true
tracks/24/keys = PoolRealArray( 0.333333, 1, 0.194335, 0.150214, -0.0606448, 0.100538, -0.141173, -0.119186, 0.977628, 1, 1, 1 )
tracks/25/type = "value"
tracks/25/path = NodePath("Armature/Skeleton/Cube:translation")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.7, 0 ) ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("Armature/Skeleton/Cube:rotation_degrees")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -27.1102, -2.56713, 103.953 ) ]
}

[sub_resource type="BoxShape" id=14]
extents = Vector3( 0.208037, 0.208729, 0.3 )

[node name="CultistMonster" type="KinematicBody" groups=[
"characters",
"enemies",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )
attack_angle = 45.0
attack_range = 4.0
attack_rate = 1.0
attack_anim_speed_mod = 1.0

[node name="BodyColliderShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0.945205, 0.147553 )
shape = SubResource( 1 )

[node name="FootColliderRay" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.640809, 0 )
shape = SubResource( 2 )

[node name="Graphics" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )

[node name="Armature" parent="Graphics" index="4"]
transform = Transform( 1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0.879582, 0 )

[node name="Cube" parent="Graphics/Armature/Skeleton" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="AnimationPlayer" parent="Graphics" index="5"]
anims/die = SubResource( 15 )

[node name="HealthManager" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
starting_health = 50
gib_at = -20

[node name="CharacterMover" parent="." instance=ExtResource( 5 )]
ignore_rotation = true

[node name="AimAtObject" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.428923 )
script = ExtResource( 6 )

[node name="DamageArea" type="Area" parent="AimAtObject"]
transform = Transform( 3.36803, 0, 0, 0, 5.77747, 0, 0, 0, 1.58275, 0, 0, 1.60523 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )
damage = 10

[node name="CollisionShape" type="CollisionShape" parent="AimAtObject/DamageArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2.2954, 0, 0, 0.523389 )
shape = SubResource( 14 )

[node name="AlertGrunt" parent="." instance=ExtResource( 9 )]
stream = ExtResource( 10 )
bus = "Grunts"

[node name="Popup" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.50661, 0 )
visible = false

[node name="DestroyTimer" type="Timer" parent="."]

[connection signal="timeout" from="DestroyTimer" to="." method="queue_free"]

[editable path="Graphics"]
